--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -8,11 +8,11 @@
 }
 
 .main-page_wrapper {
-  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  min-width: 350px;
+  max-width: 700px;
+  width: 88%;
 }
 
 .main-page_navigation {
@@ -27,8 +27,6 @@
 .main-page_top-block {
   margin-bottom: 20px;
   background-color: var(--color-background);
-  padding-right: 20px;
-  padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
