--- a/src/components/mainTextInput.css
+++ b/src/components/mainTextInput.css
@@ -1,7 +1,7 @@
 .text-input {
-  font-size: 0;
   padding-left: 20px;
   padding-right: 20px;
+  color: var(--color-light-font);
 }
 
 .text-input .textarea {
