--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -22,7 +22,7 @@
 
 .main-page_top-block {
   margin-bottom: 20px;
-  background-color: var(--color-background);
+  background-color: var(--light-background);
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 4px;
