--- a/src/components/textInput.css
+++ b/src/components/textInput.css
@@ -1,7 +1,12 @@
 .text-input {
   padding-left: 20px;
   padding-right: 20px;
-  color: var(--color-light-font);
+}
+
+.text-input_wrapper {
+  border-bottom: 1px solid #c4c4c4;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .text-input .textarea {
@@ -19,4 +24,10 @@
   margin-right: auto;
   border: white;
   border-radius: 4px;
+}
+
+.text-input_button-wrapper {
+  display: flex;
+  justify-content: center;
+  color: var(--color-light-font);
 }
