--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -29,11 +29,11 @@
 }
 
 .main-page_twits {
-  background-color: var(--color-background);
+  background-color: var(--light-background);
   padding-right: 20px;
   padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 4px;
-  color: white;
+  color: rgb(116, 110, 110);
 }
