--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: var(--color-background);
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .main-page_wrapper {
@@ -10,14 +13,6 @@
   min-width: 350px;
   max-width: 700px;
   width: 88%;
-}
-
-.main-page_navigation {
-  margin-bottom: 10px;
-  padding-right: 63px;
-  padding-left: 63px;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 .main-page_top-block {
