--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@ button {
   display: block;
 }
 
+.sign-up_input label {
+  color: black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
