--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -1,7 +1,7 @@
 .main-page {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   background-color: var(--color-background);
   padding-right: 50px;
   padding-left: 50px;
