--- a/src/pages/welcomePage.css
+++ b/src/pages/welcomePage.css
@@ -1,6 +1,6 @@
 .welcome-page {
   background-color: rgba(42, 157, 143, 0.79);
-  height: 100%;
+  height: 100vh;
   padding-top: 150px;
   padding-left: 100px;
 }
