--- a/src/components/sign-up.css
+++ b/src/components/sign-up.css
@@ -1,8 +1,13 @@
-.sign-up_form {
-  width: 300px;
+.sign-up_wrapper {
+  display: flex;
+  justify-content: space-around;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+}
+
+.sign-up_form {
+  width: 300px;
 }
 
 .sign-up_input {
